make contact form functional using emailjs

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ html {
         @apply py-2 px-4 md:py-4 md:px-8  min-h-[60vh];
     }
     .section_heading {
-        @apply font-bold text-sectionheading text-center my-2 text-brand-dark;
+        @apply font-bold text-sectionheading text-center my-2 text-black;
     }
     .btn{
         @apply px-4 py-2 bg-brand-dark hover:cursor-pointer text-white hover:bg-brand hover:text-brand-dark rounded-sm;
