update contact and Footer section

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ html {
         @apply px-4 py-2 bg-brand-dark hover:cursor-pointer text-white hover:bg-brand hover:text-brand-dark rounded-sm;
     }
     .input{
-        @apply p-2 border-2 w-[400px] border-light-gray rounded-sm text-body
+        @apply p-3 w-[400px] shadow-sm shadow-brand-dark rounded-full text-body
     }
     .label{
         @apply text-body font-semibold;
