service title update

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ html {
         @apply text-body font-medium;
     }
     .title {
-        @apply text-subheading font-bold text-black;
+        @apply text-subheading font-bold text-black whitespace-nowrap;
     }
 
 }
