--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&family=Geist:wght@100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&family=Geist:wght@100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&family=Geist:wght@100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 html {
     scroll-behavior: smooth;
 }
 
 @theme {
-    --color-brand: #0cf1f4;
-    --color-brand-dark: #007079;
-    --color-brand-light: #00e5e9;
 
-    --color-black: #000;
-    --color-dark-gray: #212529;
-    --color-white: #fff;
+    --color-brand: #3498db;
+    --color-brand-dark: #21618c;
+    --color-brand-light: #85c1e9;
+
+    --color-black: #000000;
+    --color-dark-gray: #2c3e50;
+    --color-white: #ffffff;
     --color-light-gray: #e9e9e9;
+
+        /*dark mode*/
+
+
 
     --text-hero: 36px;
     --text-heading: 32px;
@@ -22,6 +32,8 @@ html {
     --text-body: 14px;
 
     --font-merriweather: 'Merriweather', serif;
+    --font-roboto: 'Roboto', sans-serif;
+    --font-lora: 'Lora', serif;
 
 
     --spacing-1: 4px;
@@ -39,25 +51,26 @@ html {
 @layer base {}
 @layer utilities{
     .section {
-        @apply py-2 px-4 md:py-4 md:px-8  min-h-[60vh];
+        @apply py-2 px-4 md:py-4 md:px-8  min-h-[60vh] transition-colors duration-500;
     }
     .section_heading {
-        @apply font-bold text-sectionheading text-center my-2 text-black;
+        @apply font-bold text-sectionheading text-center  mb-4 text-brand-dark dark:text-brand;
     }
     .btn{
-        @apply px-4 py-2 bg-brand-dark hover:cursor-pointer text-white hover:bg-brand hover:text-brand-dark rounded-sm;
+        @apply p-2.5 bg-brand-dark cursor-pointer text-white ;
     }
-    .input{
-        @apply p-3 w-[400px] shadow-sm shadow-brand-dark rounded-full text-body
+ /* .input{
+        @apply p-3 w-full  border-l border-light-gray text-body outline-none;
     }
+        */
     .label{
         @apply text-body font-semibold;
     }
     .pElement{
-        @apply text-body font-medium;
+        @apply text-body dark:text-light-gray;
     }
     .title {
-        @apply text-subheading font-bold text-black whitespace-nowrap;
+        @apply text-subheading font-semibold text-black dark:text-light-gray;
     }
 
 }
